--- a/app/src/main/res/layout/fragment_navigation_drawer.xml
+++ b/app/src/main/res/layout/fragment_navigation_drawer.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white"
     android:orientation="vertical">
 
@@ -22,8 +23,9 @@
             app:civ_border_color="#FF000000"
             app:civ_border_width="1dp" />
 
-        <TextView
+        <com.localfriend.fonts.CustomFontTextView
             android:id="@+id/profile_name"
+            app:textStyle="@integer/roboto_medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/img_profile"
@@ -35,8 +37,9 @@
             android:textSize="@dimen/dim_16"
             android:textStyle="bold" />
 
-        <TextView
+        <com.localfriend.fonts.CustomFontTextView
             android:id="@+id/txt_logout"
+            app:textStyle="@integer/roboto_medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
@@ -72,8 +75,9 @@
                     android:background="@null"
                     android:orientation="vertical">
 
-                    <TextView
+                    <com.localfriend.fonts.CustomFontTextView
                         android:id="@+id/nav_item_service_request"
+                        app:textStyle="@integer/roboto_medium"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="?selectableItemBackground"
@@ -85,8 +89,9 @@
                         android:textColor="@color/blue_text"
                         android:textSize="@dimen/dim_18" />
 
-                    <TextView
+                    <com.localfriend.fonts.CustomFontTextView
                         android:id="@+id/nav_item_scheduled"
+                        app:textStyle="@integer/roboto_medium"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="?selectableItemBackground"
@@ -106,7 +111,8 @@
                         android:background="?selectableItemBackground"
                         android:padding="@dimen/dim_10">
 
-                        <TextView
+                        <com.localfriend.fonts.CustomFontTextView
+                            app:textStyle="@integer/roboto_medium"
 
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -118,8 +124,9 @@
                             android:textColor="@color/blue_text"
                             android:textSize="@dimen/dim_18" />
 
-                        <TextView
+                        <com.localfriend.fonts.CustomFontTextView
                             android:id="@+id/count_chat"
+                            app:textStyle="@integer/roboto_medium"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentRight="true"
@@ -141,7 +148,8 @@
                         android:background="?selectableItemBackground"
                         android:padding="@dimen/dim_10">
 
-                        <TextView
+                        <com.localfriend.fonts.CustomFontTextView
+                            app:textStyle="@integer/roboto_medium"
 
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -153,7 +161,7 @@
                             android:textColor="@color/blue_text"
                             android:textSize="@dimen/dim_18" />
 
-                        <!--    <TextView
+                        <!--    <com.localfriend.fonts.CustomFontTextView         app:textStyle="@integer/roboto_medium"
                                 android:id="@+id/count_notification"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
@@ -176,7 +184,8 @@
                         android:background="?selectableItemBackground"
                         android:padding="@dimen/dim_10">
 
-                        <TextView
+                        <com.localfriend.fonts.CustomFontTextView
+                            app:textStyle="@integer/roboto_medium"
 
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
@@ -190,8 +199,9 @@
                             android:textColor="@color/blue_text"
                             android:textSize="@dimen/dim_18" />
 
-                        <TextView
+                        <com.localfriend.fonts.CustomFontTextView
                             android:id="@+id/nav_wallet_amt"
+                            app:textStyle="@integer/roboto_medium"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentRight="true"
@@ -203,8 +213,9 @@
                     </RelativeLayout>
 
 
-                    <TextView
+                    <com.localfriend.fonts.CustomFontTextView
                         android:id="@+id/nav_item_promo_offer"
+                        app:textStyle="@integer/roboto_medium"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="?selectableItemBackground"
@@ -216,8 +227,9 @@
                         android:textColor="@color/blue_text"
                         android:textSize="@dimen/dim_18" />
 
-                    <TextView
+                    <com.localfriend.fonts.CustomFontTextView
                         android:id="@+id/nav_item_fav"
+                        app:textStyle="@integer/roboto_medium"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="?selectableItemBackground"
@@ -229,8 +241,9 @@
                         android:textColor="@color/blue_text"
                         android:textSize="@dimen/dim_18" />
 
-                    <TextView
+                    <com.localfriend.fonts.CustomFontTextView
                         android:id="@+id/nav_item_invite_friends"
+                        app:textStyle="@integer/roboto_medium"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:background="?selectableItemBackground"
@@ -245,7 +258,7 @@
 
                 </LinearLayout>
             </ScrollView>
-            <!--   <TextView
+            <!--   <com.localfriend.fonts.CustomFontTextView         app:textStyle="@integer/roboto_medium"
                    android:id="@+id/nav_item_logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
@@ -267,8 +280,9 @@
             android:layout_alignParentBottom="true"
             android:background="#C0CFF5">
 
-            <TextView
+            <com.localfriend.fonts.CustomFontTextView
                 android:id="@+id/nav_item_switch_profile"
+                app:textStyle="@integer/roboto_medium"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="?selectableItemBackground"
