--- a/app/src/main/res/layout/signup_dialog.xml
+++ b/app/src/main/res/layout/signup_dialog.xml
@@ -11,7 +11,7 @@
        android:paddingTop="@dimen/dim_10"
         android:paddingBottom="@dimen/dim_10"
         android:orientation="vertical">
-<TextView
+<com.localfriend.fonts.CustomFontTextView         app:textStyle="@integer/roboto_medium"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
@@ -21,7 +21,7 @@
     android:textSize="@dimen/dim_18"
     android:textStyle="bold"
     />
-    <TextView
+    <com.localfriend.fonts.CustomFontTextView         app:textStyle="@integer/roboto_medium"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/dim_10"
@@ -37,7 +37,7 @@
             android:background="@color/green_bg"
             android:layout_marginTop="@dimen/dim_10"
             />
-        <TextView
+        <com.localfriend.fonts.CustomFontTextView         app:textStyle="@integer/roboto_medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
