--- a/app/src/main/res/layout/activity_food.xml
+++ b/app/src/main/res/layout/activity_food.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/food_ai"
     tools:context="com.localfriend.FoodActivity">
 
@@ -36,7 +37,8 @@
                 android:background="@null"
                 android:src="@drawable/bakery" />
 
-            <TextView
+            <com.localfriend.fonts.CustomFontTextView
+                app:textStyle="@integer/roboto_medium"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
@@ -65,7 +67,8 @@
                 android:background="@null"
                 android:src="@drawable/south_indian" />
 
-            <TextView
+            <com.localfriend.fonts.CustomFontTextView
+                app:textStyle="@integer/roboto_medium"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
@@ -99,7 +102,8 @@
                 android:background="@null"
                 android:src="@drawable/fast_food" />
 
-            <TextView
+            <com.localfriend.fonts.CustomFontTextView
+                app:textStyle="@integer/roboto_medium"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
@@ -128,7 +132,8 @@
                 android:background="@null"
                 android:src="@drawable/drinks" />
 
-            <TextView
+            <com.localfriend.fonts.CustomFontTextView
+                app:textStyle="@integer/roboto_medium"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
