--- a/app/src/main/res/layout/activity_signup_two.xml
+++ b/app/src/main/res/layout/activity_signup_two.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/main_gradient_bg"
     tools:context="com.localfriend.SigninActivityTwo">
 
@@ -16,7 +17,8 @@
         android:orientation="vertical"
         android:padding="@dimen/dim_10">
 
-        <TextView
+        <com.localfriend.fonts.CustomFontTextView
+            app:textStyle="@integer/roboto_medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Welcome Customer Name\nEnter your Mobile Number"
@@ -43,6 +45,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:background="@null"
+        android:scaleType="fitXY"
         android:src="@drawable/walkthroughss" />
 
     <RelativeLayout
@@ -52,7 +55,8 @@
         android:layout_marginBottom="@dimen/dim_15"
         android:padding="@dimen/dim_10">
 
-        <TextView
+        <com.localfriend.fonts.CustomFontTextView
+            app:textStyle="@integer/roboto_medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
@@ -61,8 +65,9 @@
             android:textSize="@dimen/dim_18"
             android:textStyle="bold" />
 
-        <TextView
+        <com.localfriend.fonts.CustomFontTextView
             android:id="@+id/tv_btn_signin"
+            app:textStyle="@integer/roboto_medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
