--- a/app/src/main/res/layout/all_items.xml
+++ b/app/src/main/res/layout/all_items.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/card_new">
 
-        <TextView
+        <com.localfriend.fonts.CustomFontTextView
             android:id="@+id/tv_item_cost"
+            app:textStyle="@integer/roboto_medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/dim_10"
@@ -27,8 +29,9 @@
             android:background="@null"
             android:src="@drawable/bakery" />
 
-        <TextView
+        <com.localfriend.fonts.CustomFontTextView
             android:id="@+id/tv_item_name"
+            app:textStyle="@integer/roboto_medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/img_item"
@@ -39,7 +42,9 @@
             android:textColor="@color/black"
             android:textSize="@dimen/dim_18" />
 
-        <TextView
+        <com.localfriend.fonts.CustomFontTextView
+            android:id="@+id/tv_add_cart"
+            app:textStyle="@integer/roboto_medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/tv_item_name"
@@ -49,7 +54,6 @@
             android:drawablePadding="@dimen/dim_10"
             android:gravity="center_vertical"
             android:text="Add To Cart"
-            android:id="@+id/tv_add_cart"
             android:textColor="@color/black"
             android:textSize="@dimen/dim_18" />
     </RelativeLayout>
