--- a/app/src/main/res/layout/bottom.xml
+++ b/app/src/main/res/layout/bottom.xml
@@ -25,7 +25,7 @@
             android:padding="@dimen/dim_10"
             android:src="@drawable/ic_home_active" />
 
-        <!--<TextView
+        <!--<com.localfriend.fonts.CustomFontTextView         app:textStyle="@integer/roboto_medium"
             android:id="@+id/tv_home"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -54,7 +54,7 @@
             android:padding="@dimen/dim_10"
             android:src="@drawable/ic_tifin" />
 
-        <!-- <TextView
+        <!-- <com.localfriend.fonts.CustomFontTextView         app:textStyle="@integer/roboto_medium"
              android:id="@+id/tv_tiffin"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
@@ -83,7 +83,7 @@
             android:padding="@dimen/dim_10"
             android:src="@drawable/ic_cart" />
 
-        <!--<TextView
+        <!--<com.localfriend.fonts.CustomFontTextView         app:textStyle="@integer/roboto_medium"
             android:id="@+id/tv_cart"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -112,7 +112,7 @@
             android:padding="@dimen/dim_10"
             android:src="@drawable/ic_more" />
 
-        <!-- <TextView
+        <!-- <com.localfriend.fonts.CustomFontTextView         app:textStyle="@integer/roboto_medium"
              android:id="@+id/tv_more"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
