--- a/app/src/main/res/layout/breakfast_item.xml
+++ b/app/src/main/res/layout/breakfast_item.xml
@@ -35,7 +35,7 @@
         </android.support.v7.widget.CardView>
     </FrameLayout>
 
-    <TextView
+    <com.localfriend.fonts.CustomFontTextView         app:textStyle="@integer/roboto_medium"
         android:id="@+id/tv_breakfast_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -48,7 +48,7 @@
         android:textColor="@color/white"
         android:textSize="@dimen/dim_16" />
 
-    <TextView
+    <com.localfriend.fonts.CustomFontTextView         app:textStyle="@integer/roboto_medium"
         android:id="@+id/tv_breakfast_cost"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -63,7 +63,7 @@
         android:textColor="@color/white"
         android:textSize="@dimen/dim_18" />
 
-    <TextView
+    <com.localfriend.fonts.CustomFontTextView         app:textStyle="@integer/roboto_medium"
         android:id="@+id/tv_add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
