--- a/app/src/main/res/layout/cart_item.xml
+++ b/app/src/main/res/layout/cart_item.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical"
     android:layout_marginLeft="@dimen/dim_10"
     android:layout_marginRight="@dimen/dim_10"
+    app:cardElevation="@dimen/dim_10"
     app:cardBackgroundColor="@color/white"
     app:cardCornerRadius="@dimen/dim_5">
 
@@ -46,7 +47,7 @@
                 android:paddingLeft="@dimen/dim_10"
                 android:paddingRight="@dimen/dim_10">
 
-                <TextView
+                <com.localfriend.fonts.CustomFontTextView         app:textStyle="@integer/roboto_medium"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Veggie Burger"
@@ -60,7 +61,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/dim_15">
 
-                    <TextView
+                    <com.localfriend.fonts.CustomFontTextView         app:textStyle="@integer/roboto_medium"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Rs 100"
@@ -68,7 +69,7 @@
                         android:layout_centerVertical="true"
                         android:textSize="@dimen/dim_18" />
 
-                    <TextView
+                    <com.localfriend.fonts.CustomFontTextView         app:textStyle="@integer/roboto_medium"
                         android:id="@+id/tv_plus"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -79,7 +80,7 @@
                         android:text=" + "
                         android:textSize="@dimen/dim_18" />
 
-                    <TextView
+                    <com.localfriend.fonts.CustomFontTextView         app:textStyle="@integer/roboto_medium"
                         android:id="@+id/tv_counter"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -89,7 +90,7 @@
                         android:layout_centerVertical="true"
                         android:textColor="@color/blue_text"
                         android:textSize="@dimen/dim_18" />
-                    <TextView
+                    <com.localfriend.fonts.CustomFontTextView         app:textStyle="@integer/roboto_medium"
                         android:id="@+id/tv_minus"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
