--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/white"
     android:orientation="vertical"
     tools:context="com.localfriend.fragments.HomeFragment">
@@ -9,8 +10,8 @@
     <com.daimajia.slider.library.SliderLayout
         android:id="@+id/slider_home_frag"
         android:layout_width="match_parent"
-        android:background="#BEE9FC"
-        android:layout_height="@dimen/dim_320" />
+        android:layout_height="@dimen/dim_320"
+        android:background="#BEE9FC" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -45,7 +46,8 @@
                         android:background="@null"
                         android:src="@drawable/ic_tifin_two" />
 
-                    <TextView
+                    <com.localfriend.fonts.CustomFontTextView
+                        app:textStyle="@integer/roboto_medium"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
@@ -71,7 +73,8 @@
                         android:background="@null"
                         android:src="@drawable/ic_vegetable" />
 
-                    <TextView
+                    <com.localfriend.fonts.CustomFontTextView
+                        app:textStyle="@integer/roboto_medium"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
@@ -98,7 +101,8 @@
                         android:background="@null"
                         android:src="@drawable/ic_fruit" />
 
-                    <TextView
+                    <com.localfriend.fonts.CustomFontTextView
+                        app:textStyle="@integer/roboto_medium"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
@@ -130,7 +134,8 @@
                         android:background="@null"
                         android:src="@drawable/ic_food" />
 
-                    <TextView
+                    <com.localfriend.fonts.CustomFontTextView
+                        app:textStyle="@integer/roboto_medium"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
@@ -156,7 +161,8 @@
                         android:background="@null"
                         android:src="@drawable/ic_mithaiwala" />
 
-                    <TextView
+                    <com.localfriend.fonts.CustomFontTextView
+                        app:textStyle="@integer/roboto_medium"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
@@ -183,7 +189,8 @@
                         android:background="@null"
                         android:src="@drawable/ic_discount" />
 
-                    <TextView
+                    <com.localfriend.fonts.CustomFontTextView
+                        app:textStyle="@integer/roboto_medium"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
