--- a/app/src/main/res/layout/menu_left_drawer.xml
+++ b/app/src/main/res/layout/menu_left_drawer.xml
@@ -2,13 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/main_gradient_bg"
     android:orientation="vertical">
 
-  <!--  <Space
-        android:layout_width="wrap_content"
-        android:layout_height="90dp" />-->
-
+    <!--  <Space
+          android:layout_width="wrap_content"
+          android:layout_height="90dp" />-->
 
 
     <LinearLayout
@@ -17,7 +17,7 @@
         android:baselineAligned="false"
         android:orientation="vertical"
         android:paddingLeft="@dimen/dim_60"
-       android:paddingTop="@dimen/dim_20">
+        android:paddingTop="@dimen/dim_20">
 
         <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/img_profile"
@@ -29,14 +29,15 @@
             app:civ_border_color="#FF3CBEA3"
             app:civ_border_width="1dp" />
 
-        <TextView
+        <com.localfriend.fonts.CustomFontTextView
+            app:textStyle="@integer/roboto_medium"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Kuldeep Singh"
             android:layout_gravity="center_horizontal"
-            android:textSize="@dimen/dim_18"
             android:layout_marginTop="@dimen/dim_10"
-            android:textColor="@color/white"/>
+            android:text="Kuldeep Singh"
+            android:textColor="@color/white"
+            android:textSize="@dimen/dim_18" />
 
     </LinearLayout>
 
