--- a/app/src/main/res/layout/toolbar_common.xml
+++ b/app/src/main/res/layout/toolbar_common.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/toolbar_common"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
+    app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
     android:background="@drawable/main_gradient_bg">
 
-    <TextView
+    <com.localfriend.fonts.CustomFontTextView         app:textStyle="@integer/roboto_medium"
         android:id="@+id/toolbar_title_common"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
